# bazel-vite-demo

./: .gitignore  MODULE.bazel  README.md
.github/workflows/: deploy.yml
app/: BUILD.bazel  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vite_wrapper.mjs
app/src/: app.tsx  globals.css  main.tsx  mock-chat.ts
app/src/components/ai-elements/: message.tsx
