load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_binary")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

_SRCS = glob(
    [
        "src/**/*.tsx",
        "src/**/*.ts",
        "src/**/*.css",
    ],
)

js_binary(
    name = "vite_bin",
    data = [
        ":node_modules/@tailwindcss/vite",
        ":node_modules/@vitejs/plugin-react",
        ":node_modules/tailwindcss",
        ":node_modules/vite",
    ],
    entry_point = "vite_wrapper.mjs",
)

js_run_binary(
    name = "bundle",
    srcs = _SRCS + [
        "index.html",
        "vite.config.ts",
        "vite-env.d.ts",
        "tsconfig.json",
        ":node_modules",
    ] + glob(
        ["public/**"],
        allow_empty = True,
    ),
    args = ["build"],
    chdir = package_name(),
    out_dirs = ["dist"],
    tool = ":vite_bin",
)
